--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ html,body,ul,li,a,div,p,*{
 }
 
 .restaurant-card{
-    height:300px;
+    
     width: 220px;
     border:1px solid gray;
 }
@@ -88,8 +88,8 @@ html,body,ul,li,a,div,p,*{
     background-color: cornflowerblue;
 }
 .restaurant-image{
-    height:200px;
-    width: 220px;
+    width: 100%;
+    height:100%;
 }
 
 .footer{
