--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ html,body,ul,li,a,div,p,*{
     font-size: 1.4em;
     list-style: none;
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     gap:3em;
 }
@@ -69,6 +70,7 @@ html,body,ul,li,a,div,p,*{
 
 .search-form{
     display: flex;
+    flex-wrap: wrap;
     column-gap: 0.4em;
 }
 
@@ -121,4 +123,22 @@ html,body,ul,li,a,div,p,*{
     background-color: lightgrey;
     height: 6em;
     padding: 3em;
+}
+
+.shirm{
+    height: 100vh;
+    background-color: gainsboro;
+}
+
+.login-button{
+    font-size: 1.2em;
+    padding-inline: 1.4em;
+    padding-block: 0.2em;
+    cursor: pointer;
+    border-radius: 0.2em;
+}
+
+.error-message{
+    color:red;
+    margin-block: 1em;
 }
