--- a/index.css
+++ b/index.css
@@ -142,3 +142,37 @@ html,body,ul,li,a,div,p,*{
     color:red;
     margin-block: 1em;
 }
+
+.user-card{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 0.2em;
+    border: 1px solid gray;
+    width:300px;
+    padding: 1em;
+}
+
+.user-card img{
+    height:100px;
+    width:100px;
+    border: 1px solid gray;
+    border-radius: 50%;
+}
+
+.user-image-container{
+    width:100%;
+    height:100px;
+    text-align: center;
+    text-justify: center;
+    border: 1px solid rgb(238, 16, 16);
+    margin-block: 1em;
+}
+
+.red{
+    color:red;
+}
+.green{
+    color:green;
+}
