@reduxtoolkit and react-redux added and store and slice added

--- a/index.css
+++ b/index.css
@@ -94,6 +94,7 @@ html,body,ul,li,a,div,p,*{
 }
 
 .list-container{
+    position: relative;
     display:flex;
     justify-content:space-around;
     flex-wrap: wrap;
@@ -104,7 +105,7 @@ html,body,ul,li,a,div,p,*{
 }
 
 .restaurant-card{
-    
+    position: relative;
     width: 220px;
     border:1px solid gray;
 }
@@ -175,4 +176,21 @@ html,body,ul,li,a,div,p,*{
 }
 .green{
     color:green;
+}
+
+.label {
+    z-index: 100;
+    position:absolute;
+    top:0;
+    left:0;
+    width: 50%;
+    background-color: rgb(134, 3, 3);
+    color:antiquewhite;
+    font-size: larger;
+    padding-block: 0.1em;
+    border:1px solid antiquewhite;
+}
+
+.label-container{
+    position: relative;
 }
